# OpenALPR

./: .gitignore  .travis.yml  OpenALPR.sln  README.md  clean.bat  setup.bat  sonar-project.properties
Artifacts/Test/: dependency-check-report_plateserver_0701.html
OpenALPR/: OpenALPR.sln  clean.bat  setup.bat
OpenALPR/OpenCVDeviceEnumerator/: DeviceEnumerator.cpp  DeviceEnumerator.h  LICENSE  OpenCVDeviceEnumerator.cpp  OpenCVDeviceEnumerator.vcxproj  OpenCVDeviceEnumerator.vcxproj.filters  readme.md
OpenALPR/RootCA/: rootca.crt  rootca.csr  rootca.key  serverKey.pem
OpenALPR/alpr/: alpr.vcxproj  alpr.vcxproj.filters  main.cpp
OpenALPR/common/: NetworkTCP.cpp  NetworkTCP.h
OpenALPR/db-18.1.40/: clib_port.h  db.h  db_config.h  db_cxx.h  db_int.h  dbstl_common.h  libdb181.exp
OpenALPR/faker/: gen.py  rungen.bat
OpenALPR/lgdemo/: lgdemo.cpp  lgdemo.vcxproj  lgdemo.vcxproj.filters
OpenALPR/loaddb/: loaddb.cpp  loaddb.vcxproj  loaddb.vcxproj.filters
OpenALPR/rundata/: openalpr.conf
OpenCVDeviceEnumerator/: OpenCVDeviceEnumerator.vcxproj
alpr/: alpr.vcxproj  alpr.vcxproj.filters  main.cpp
common/: NetworkTCP.cpp  NetworkTCP.h
faker/: gen.py
lgdemo/: lgdemo.cpp  lgdemo.vcxproj  lgdemo.vcxproj.filters
loaddb/: loaddb.cpp  loaddb.vcxproj
plateServer/: clean.bat  plateServer.sln  setup.bat
server/: logger.cpp  logger.h  server.cpp  server.vcxproj  server.vcxproj.filters
studio/: requirement.txt  studio.txt
studio/openalpr64-sdk-4.1.1/c_examples/: CMakeLists.txt  alpr_test.cpp  alprbatch_test.c  alprstream.cpp  generate_vs_project.bat
(+1248 files in other folders)
